force-app/main/default/objects/GPMS_Application_History__c/GPMS_Application_History__c.object-meta.xml
<CustomObject>
    <description>Used to record application history record</description>
    <label>Application History</label>
    <nameField>
        <displayFormat>APH-{00000}</displayFormat>
        <label>Application History</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>