force-app/main/default/objects/GPMS_Application_History__c/fields/Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Application_Status__c</fullName>
    <description>Application history status</description>
    <label>Application Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>