force-app/main/default/objects/GPMS_Application_History__c/fields/ApplicationId__c.field-meta.xml
<CustomField>
    <fullName>ApplicationId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>BusinessLicenseApplication</referenceTo>
    <relationshipLabel>Application History</relationshipLabel>
    <relationshipName>Application_History</relationshipName>
    <type>Lookup</type>
</CustomField>