force-app/main/default/objects/GPMS_Application_History__c/fields/Status_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Status_Effective_Date__c</fullName>
    <description>Effective Date of Application Status</description>
    <label>Status Effective Date</label>
    <type>Date</type>
</CustomField>